# rc700-sysgen

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COPILOT_CAPABILITIES.md  RC702_HARDWARE_TECHNICAL_REFERENCE.md  README.md  ROA327_CHARACTER_ROM.md  SYSGEN.ASM  SYSGEN.COM  SYSGEN.SYM  TODO_CLION_Z88DK.md  TODO_CPNET_SERVER_AND_HARDWARE.md  TODO_PROM1_STARFIELD_DEMO.md  TODO_SDCCCALL_BC_EXTENSION.md  TODO_UPD765_READ_TRACK.md  TODO_Z88DK_CLANG_BACKEND.md  TODO_Z88DK_RC700_TARGET.md  ZMAC_BUG_REPORT.md  cpnet.md
.github/: copilot-instructions.md
autoload-in-asm/: Makefile  fdc.c  hal.h  isr.c
autoload-in-c/: .clangd  .gitignore  ALL_C_PLAN.md  BOOT_SEQUENCE.md  CLANG_REGISTER_CALLING_CONVENTION.md  CMakeLists.txt  Dockerfile.zllvm-cbe  INVESTIGATION.md  Makefile  README.md  SDCC_SFR_MECHANISM.md  SEM702_FONT_COMPRESSION.md  Z88DK_EVALUATION.md  ZSDCC_NOTES.md  boot.c  boot.h  boot_entry.c  boot_rom.c  clang2z88dk.sh  clang_calling_test.c  clang_port_test.c  clang_test.c  code.c  crt0.asm  fdc.c  fmt.c  gen_qr.py  hal.h  hal_host.c  hal_z80.c  init.c  intvec.c  isr.c  mame_boot_test.lua  mame_comal_debug.lua  mame_comal_for_test.lua  mame_comal_test.lua  mame_debug_fdc.lua  mame_find_display.lua  mame_trace_fdc.lua  (+10 more)
autoload-in-c/clang/: BUGS.md  Makefile  intrinsic.h  prom.clang.lis  prom0_debug.cmd  qr_data.h  rc700_prom.ld
autoload-in-c/clang_z80/: Makefile  STATUS.md  banner.h  boot.s  intrinsic.h  prom.elf  rc700.h  rc700.ld  rc700_prom.ld  rom.elf  runtime.s  sdcc_compat.h  string.h  test.c
autoload-in-c/sdcc/: Makefile  sections.asm
autoload-in-c/tasks/: known-bugs.md
autorom-in-asm/: .gitignore  INVESTIGATION.md  boot.h  crt0.asm  hal.h  hal_host.c
cpm/: .gitignore  Makefile  OS2CCP.ASM  OS3BDOS.ASM  apply_hex.py  rc700.z3t  rc700_z3termcap.h  rc700gr.z3t  stamp_serial.py  verify_against_imd.py
cpnet/: CPNET_SYSTEM.md  CPNOS_SIZING.md  DRI_PROTOCOL.md  MAME_MPM_WIRE_FORMAT.md  MPMNET_ANALYSIS.md  PARALLEL_TRANSPORT.md  SERIAL_PROTOCOLS.md  SPLIT_CHANNEL_TRANSPORT.md  SPR_FORMAT.md  TEST_RESULTS.md  Z80PACK_MPMNET.md  autotest.lua  bin2ihex.py  build_snios.py  chksum.asm  chksum_roundtrip_test.sh  cpnet12_client.py  diag.asm  login_trace.lua  run_test.sh  serial_graph.py  serial_monitor.lua  server.py  setup.lua  snios.asm
cpnos-rom/: .gitignore  MEMORY_MAP.md  Makefile  PORT_OUTPUTS.md  README.md  bios_jt.s  bios_shims.s  build_loader.py  cfgtbl.c  cfgtbl.h  cpnet_dispatch.c  cpnet_pio_server.py  cpnos_main.c  cpnos_rom.ld  hal.h  init.c  isr.c  isr.s  mame_acid_test.lua  mame_boot_test.lua  mame_jt_probe.lua  mame_polypascal_test.lua  mame_porttap.lua  mame_ppas_test.lua  mame_smoke_dump.lua  mame_sub_test.lua  netboot.c  netboot_mpm.c  netboot_server.py  payload.ld  payload_checksum.c  rc700_console.c  rc700_console.h  relocator.c  relocator.ld  reset.s  resident.c  sio_b_driver.py  snios.s  trace.dbg  (+3 more)
demo/: stars.asm  stars2.asm
docs/: CLEAN_ROOM_IMPLEMENTATION_GUIDE.md  COMAL80.md  CPM_SOURCES.md  CPM_USERS_GUIDE_NOTES.md  EMULATOR_FTP.md  EMULATOR_MONITOR.md  KRYOFLUX.md  MAME_GDB_STUB.md  MAME_RC702.md  MEM700_RAMDISK.md  RC702_BIOS_SPECIFICATION.md  RC703_BIOS_SOURCE_COMPARISON.md  SDCC_PITFALLS.md  SPECIFICATION_FEEDBACK.md  TAIL_CALL_OPTIMIZATION.md  VERIFY_ANALYSIS.md  cpnet_bridge_vs_bitbanger.md  cpnet_fast_link.md  cpnet_pio_direct_design.md  cpnet_pio_speed_results.md  cpnet_slot_work_history.md  cpnet_throughput_analysis.md  imd_to_mpm.md  j8_bus_expansion.md  mame-rc702-piob-slot-regression.md  z88dk_docker_rebuild.md
rc702-test-v1.2/: Dockerfile.ocrmypdf-dan  MANUAL_ANALYSIS.md  RC702_TEST_v1.2.imd  RCSL-44-RT-2061_RC701_RC702_Testsystem_v1.1.txt  README.md  RUNTIME_ANALYSIS.md  dispatcher_ram_0330_disasm.asm  (+6 more)
rcbios/: 0xE2F8  (+50 more)
rcbios-in-c/: .clangd  .gitignore  ALL_C_PLAN.md  ASM_BLOCKS.md  BIOS_REGISTER_ABI.md  BOOT_POINTER_INVESTIGATION.md  CLANG_PORT.md  CMakeLists.txt  CONOUT_BENCH.md  CPM_BIOS_ABI.md  C_STDLIB_IVT_PLAN.md  MIGRATION_PLAN.md  MODULARIZATION.md  Makefile  OPTIMIZATION_NOTES.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_PLAN.md  PEEPHOLE.md  PURE_C_PLAN.md  README.md  SDCCCALL.md  SIZE_COMPARISON.md  STACK_ANALYSIS.md  STACK_BUG_ANALYSIS.md  STANDALONE_BOOT_PLAN.md  STANDALONE_PLAN.md  SYSGEN_INSTALL.md  TODO_26TH_LINE.md  Z88DK_NOTES.md  bench_memcpy.ld  bench_memcpy.s  bench_memcpy.sh  bench_memcpy_c.c  bench_memcpy_c.sh  bgstar_test.asm  bios.c  bios.h  bios_hw_init.c  bios_jump_vector_table.c  bios_page.c  (+85 more)
rcbios-in-c/clang/: Makefile  SIZE_ANALYSIS.md  bios.clang.lis  bios_shims.s  intrinsic.h  rc700_bios.ld  runtime.s  string.h
rcbios-in-c/clang_z80/: SIZE_ANALYSIS.md  bios_jump_vector_table.c  bios_shims.s  intrinsic.h  rc700_bios.ld  runtime.s  string.h
rcbios-in-c/docs/: cpm_naming.md  diskdef_macro.md  intel_8275_datasheet.md  kox_pas_crt_explorer.md  linux_host_hardware.md  parallel_host_interface.md  parport_cable_investigation.md  serial_cable_wiring.md  serial_motherboard_uart.md
rcbios-in-c/locale/: library_tables.h  us_ascii_tables.h
rcbios-in-c/sdcc/: Makefile  z88dk_section_layout.asm
rcbios-in-c/tasks/: 26-line-status.md  bios-size-issues.md  cpnos-issues.md  cpnos-rom-plan.md  lessons.md  mame-danish-keyboard.md  parallel-port-transfer.md  sdlc-hw-test.md  session10-summary.md  session10b-summary.md  session17-merge-notes.md  session17-siob-console.md  session18-serial-speed.md  session20-sdlc-summary.md  session23-sio-flow-control.md  session32-llvm-codegen-fixes.md  sio-independent-rates.md  siob-console-dipswitch.md  siob-rx-no-stack-switch.md  stack_corruption_investigation.md  todo.md  two-port-deploy-script.md
rcbios-in-c/tasks/test-cases/: test1b_reload.c  test2_constfold.c  test4c_pushpop.c  test6a_memcmp.c  test6b_incmem.c  test6c2_djnz.c  test6c3_djnz.c  test_switch_bios.c
rcbios-in-c/tests/: bios_echo_big.asm  bios_echo_siob.asm  check_no_bss_in_relocate.py  run_sioa_rx_test.sh  run_siob_echo_test.sh  sioa_feed_and_read.py  sioa_trace.lua  siob_debug_roundtrip.py  siob_debug_roundtrip.sh  siob_debug_smoke.sh
(+250 files in other folders)
